--- a/products.html
+++ b/products.html
@@ -26,10 +26,21 @@
           ><img class="logo" src="./picture/logo/LogoVer2.png" alt=""
         /></a>
         <div class="top">
+          <div class="menu">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
           <div class="search">
             <img src="./picture/icon/scan.png" alt="" />
             <input type="text" placeholder="搜尋商品" />
           </div>
+
+          <!-- RWD搜尋 -->
+          <div class="rwd-search">
+            <input type="search" placeholder="搜尋商品" />
+          </div>
+          <!-- ------- -->
           <div class="user">
             <a href="#"><img src="./picture/icon/user.png" alt="" /></a>
           </div>
@@ -38,6 +49,38 @@
               ><img src="./picture/icon/shopping-cart.png" alt=""
             /></a>
           </div>
+
+          <!-- RWD導覽列 -->
+          <div class="rwd-nav">
+            <ul>
+              <li>
+                <a href="index.html"
+                  ><i class="fa-solid fa-house-chimney"></i> 首頁</a
+                >
+              </li>
+              <li>
+                <a href="news.html"
+                  ><i class="fa-solid fa-bars"></i> 最新消息</a
+                >
+              </li>
+              <li>
+                <a href="products.html"
+                  ><i class="fa-brands fa-shopify"></i> 所有商品</a
+                >
+              </li>
+              <li>
+                <a href="about.html"
+                  ><i class="fa-solid fa-address-card"></i> 關於我們</a
+                >
+              </li>
+              <li>
+                <a href="contact.html"
+                  ><i class="fa-sharp fa-regular fa-message"></i> 常見Q&A</a
+                >
+              </li>
+            </ul>
+          </div>
+          <!-- ---------------- -->
         </div>
       </section>
       <section class="nav-list">
@@ -404,6 +447,10 @@
       </div>
     </section>
 
+    <div class="rwd-list-button">
+      <button>分類列表</button>
+    </div>
+
     <!-- 頁腳 -->
     <footer>
       <div class="footer-content">
@@ -436,28 +483,6 @@
       </div>
     </footer>
 
-    <script>
-      // 商品頁上方的圖片轉換
-      let topImage = document.querySelector("div.top-image");
-
-      setInterval(() => {
-        if (
-          topImage.style.backgroundImage ==
-          'url("./picture/product/top-banner.png")'
-        ) {
-          topImage.style.backgroundImage =
-            'url("./picture/product/top-banner2.png")';
-        } else if (
-          topImage.style.backgroundImage ==
-          'url("./picture/product/top-banner2.png")'
-        ) {
-          topImage.style.backgroundImage =
-            'url("./picture/product/top-banner3.jpg")';
-        } else {
-          topImage.style.backgroundImage =
-            'url("./picture/product/top-banner.png")';
-        }
-      }, 2600);
-    </script>
+    <script src="./products.js"></script>
   </body>
 </html>
