--- a/article.html
+++ b/article.html
@@ -59,12 +59,12 @@
               </li>
               <li>
                 <a href="news.html"
-                  ><i class="fa-solid fa-bars"></i> 最新消息</a
+                  ><i class="fa-solid fa-table-list"></i> 最新消息</a
                 >
               </li>
               <li>
                 <a href="products.html"
-                  ><i class="fa-brands fa-shopify"></i> 所有商品</a
+                  ><i class="fa-solid fa-bag-shopping"></i> 所有商品</a
                 >
               </li>
               <li>
@@ -91,11 +91,13 @@
               >
             </li>
             <li>
-              <a href="news.html"><i class="fa-solid fa-bars"></i> 最新消息</a>
+              <a href="news.html"
+                ><i class="fa-solid fa-table-list"></i> 最新消息</a
+              >
             </li>
             <li>
               <a href="products.html"
-                ><i class="fa-brands fa-shopify"></i> 所有商品</a
+                ><i class="fa-solid fa-bag-shopping"></i> 所有商品</a
               >
             </li>
             <li>
@@ -141,13 +143,13 @@
         <img src="./picture/news/SHF/zero-two-3.jpg" alt="" />
         <p>
           「S.H.Figuarts
-          假面騎士ZERO-TWO」將過去推出的伊絲版本重新調整體態比例，再現由飛電或人變身時的男性體態。全身裝甲造型同樣洗練帥氣，除了製作出複眼、黑色裝甲的網紋外，也運用金屬銀、金屬紅、螢光綠等豐富色彩進進行塗裝，腰帶的飛電
+          假面騎士ZERO-TWO」將過去推出的伊茲版本重新調整體態比例，再現由飛電或人變身時的男性體態。全身裝甲造型同樣洗練帥氣，除了製作出複眼、黑色裝甲的網紋外，也運用金屬銀、金屬紅、螢光綠等豐富色彩進進行塗裝，腰帶的飛電
           ZERO-TWO 驅動器部分則以透明零件再現質感。
         </p>
         <img src="./picture/news/SHF/zero-two-4.jpg" alt="" />
         <img src="./picture/news/SHF/zero-two-5.jpg" alt="" />
         <p>
-          高度高出一公分的男性體態搭配靈活的可動關節設計，能夠把玩出有別於伊絲版本的戰鬥風格，配件中也附上左4種、右5種的替換造型手掌與未展開狀態的
+          高度高出一公分的男性體態搭配靈活的可動關節設計，能夠把玩出有別於伊茲版本的戰鬥風格，配件中也附上左4種、右5種的替換造型手掌與未展開狀態的
           ZERO-TWO 數據鑰匙，替換使用就能再現多種場景。
         </p>
         <img src="./picture/news/SHF/zero-two-6.jpg" alt="" />
