--- a/contact.html
+++ b/contact.html
@@ -59,12 +59,12 @@
               </li>
               <li>
                 <a href="news.html"
-                  ><i class="fa-solid fa-bars"></i> 最新消息</a
+                  ><i class="fa-solid fa-table-list"></i> 最新消息</a
                 >
               </li>
               <li>
                 <a href="products.html"
-                  ><i class="fa-brands fa-shopify"></i> 所有商品</a
+                  ><i class="fa-solid fa-bag-shopping"></i> 所有商品</a
                 >
               </li>
               <li>
@@ -91,11 +91,13 @@
               >
             </li>
             <li>
-              <a href="news.html"><i class="fa-solid fa-bars"></i> 最新消息</a>
+              <a href="news.html"
+                ><i class="fa-solid fa-table-list"></i> 最新消息</a
+              >
             </li>
             <li>
               <a href="products.html"
-                ><i class="fa-brands fa-shopify"></i> 所有商品</a
+                ><i class="fa-solid fa-bag-shopping"></i> 所有商品</a
               >
             </li>
             <li>
